--- a/www/index.html
+++ b/www/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta content="user-scalable=no, initial-scale=1, maximum-scale=1,
       minimum-scale=1, width=device-width" name="viewport">
-   <title>React Cordova Boilerplate</title>
+   <title>JuiceJuice</title>
   </head>
   <body>
     <script src="bundle.js"></script>
